@@ -122,6 +122,14 @@ public class AggregateBy extends SubAssembly
   private Aggregator[] aggregators;
   private transient GroupBy groupBy;
 
+  public enum Cache
+    {
+      Num_Keys_Flushed,
+      Num_Keys_Hit,
+      Num_Keys_Missed
+    }
+
+  @Deprecated
   public enum Flush
     {
       Num_Keys_Flushed
@@ -227,7 +235,7 @@ public class AggregateBy extends SubAssembly
         this.functorFields[ i ] = functors[ i ].getDeclaredFields();
 
       Comparator[] hashers = TupleHasher.merge( functorFields );
-      if ( !TupleHasher.isNull( hashers ) )
+      if( !TupleHasher.isNull( hashers ) )
         this.tupleHasher = new TupleHasher( null, hashers );
       else
         this.tupleHasher = null;
@@ -306,6 +314,7 @@ public class AggregateBy extends SubAssembly
         if( doRemove )
           {
           completeFunctors( flowProcess, ( (FunctionCall) operationCall ).getOutputCollector(), context.result, eldest );
+          flowProcess.increment( Cache.Num_Keys_Flushed, 1 );
           flowProcess.increment( Flush.Num_Keys_Flushed, 1 );
 
           if( flushes % threshold == 0 ) // every multiple, write out data
@@ -347,6 +356,11 @@ public class AggregateBy extends SubAssembly
         {
         functorContext = new Tuple[ functors.length ];
         context.lru.put( key, functorContext );
+        flowProcess.increment( Cache.Num_Keys_Missed, 1 );
+        }
+      else
+        {
+        flowProcess.increment( Cache.Num_Keys_Hit, 1 );
         }
 
       for( int i = 0; i < functors.length; i++ )
@@ -386,7 +400,6 @@ public class AggregateBy extends SubAssembly
 
       outputCollector.add( result );
       }
-
 
     @Override
     public boolean equals( Object object )
@@ -457,7 +470,7 @@ public class AggregateBy extends SubAssembly
    * @param groupingFields of type Fields
    * @param assemblies     of type CompositeAggregator...
    */
-  @ConstructorProperties({"pipe", "groupingFields", "assemblies"})
+  @ConstructorProperties( {"pipe", "groupingFields", "assemblies"} )
   public AggregateBy( Pipe pipe, Fields groupingFields, AggregateBy... assemblies )
     {
     this( null, Pipe.pipes( pipe ), groupingFields, 0, assemblies );
@@ -471,7 +484,7 @@ public class AggregateBy extends SubAssembly
    * @param threshold      of type int
    * @param assemblies     of type CompositeAggregator...
    */
-  @ConstructorProperties({"pipe", "groupingFields", "threshold", "assemblies"})
+  @ConstructorProperties( {"pipe", "groupingFields", "threshold", "assemblies"} )
   public AggregateBy( Pipe pipe, Fields groupingFields, int threshold, AggregateBy... assemblies )
     {
     this( null, Pipe.pipes( pipe ), groupingFields, threshold, assemblies );
@@ -485,7 +498,7 @@ public class AggregateBy extends SubAssembly
    * @param threshold      of type int
    * @param assemblies     of type CompositeAggregator...
    */
-  @ConstructorProperties({"name", "pipe", "groupingFields", "threshold", "assemblies"})
+  @ConstructorProperties( {"name", "pipe", "groupingFields", "threshold", "assemblies"} )
   public AggregateBy( String name, Pipe pipe, Fields groupingFields, int threshold, AggregateBy... assemblies )
     {
     this( name, Pipe.pipes( pipe ), groupingFields, threshold, assemblies );
@@ -499,7 +512,7 @@ public class AggregateBy extends SubAssembly
    * @param groupingFields of type Fields
    * @param assemblies     of type CompositeAggregator...
    */
-  @ConstructorProperties({"name", "pipes", "groupingFields", "assemblies"})
+  @ConstructorProperties( {"name", "pipes", "groupingFields", "assemblies"} )
   public AggregateBy( String name, Pipe[] pipes, Fields groupingFields, AggregateBy... assemblies )
     {
     this( name, pipes, groupingFields, 0, assemblies );
@@ -514,7 +527,7 @@ public class AggregateBy extends SubAssembly
    * @param threshold      of type int
    * @param assemblies     of type CompositeAggregator...
    */
-  @ConstructorProperties({"name", "pipes", "groupingFields", "threshold", "assemblies"})
+  @ConstructorProperties( {"name", "pipes", "groupingFields", "threshold", "assemblies"} )
   public AggregateBy( String name, Pipe[] pipes, Fields groupingFields, int threshold, AggregateBy... assemblies )
     {
     this( name, threshold );
@@ -642,9 +655,9 @@ public class AggregateBy extends SubAssembly
     return groupBy;
     }
 
-  @Property(name = "threshold", visibility = Visibility.PUBLIC)
-  @PropertyDescription("Threshold of the aggregation.")
-  @PropertyConfigured(value = AGGREGATE_BY_THRESHOLD, defaultValue = "10000")
+  @Property( name = "threshold", visibility = Visibility.PUBLIC )
+  @PropertyDescription( "Threshold of the aggregation." )
+  @PropertyConfigured( value = AGGREGATE_BY_THRESHOLD, defaultValue = "10000" )
   public int getThreshold()
     {
     return threshold;
