@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.6.0 [unreleased]
 
+  Updated c.p.a.AggregateBy and c.p.a.Unique to count cache flushes, hits, and misses. Previously only AggregateBy
+  tracked cache flushes.
+
   Updated slf4j to 1.7.5.
 
   Added ability to customize trace data captured for debugging purposes.
